FLOE-540: Fixed alignment of navigation; added to other pages

--- a/css/style.css
+++ b/css/style.css
@@ -99,13 +99,6 @@ body {
     display:block;
 }
 
-.floe .floe-nav {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-self: flex-end;
-}
-
 .floe .floe-nav ul li {
     list-style: none;
     font-weight: bold;
